--- a/LoginCliente/LoginCliente.csproj
+++ b/LoginCliente/LoginCliente.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CadastroClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroClientes.Designer.cs">
+      <DependentUpon>CadastroClientes.cs</DependentUpon>
+    </Compile>
     <Compile Include="ConexaoLoginCliente.cs" />
     <Compile Include="LoginClienteTela.cs">
       <SubType>Form</SubType>
@@ -55,6 +61,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CadastroClientes.resx">
+      <DependentUpon>CadastroClientes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LoginClienteTela.resx">
       <DependentUpon>LoginClienteTela.cs</DependentUpon>
     </EmbeddedResource>
