--- a/Menu/TelaInicio.csproj
+++ b/Menu/TelaInicio.csproj
@@ -53,6 +53,13 @@
       <DependentUpon>CarregarChat.cs</DependentUpon>
     </Compile>
     <Compile Include="ConexaoCarregarChat.cs" />
+    <Compile Include="ConexaoVerificacao.cs" />
+    <Compile Include="Verificação.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Verificação.Designer.cs">
+      <DependentUpon>Verificação.cs</DependentUpon>
+    </Compile>
     <Compile Include="TelaInicio.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +83,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Verificação.resx">
+      <DependentUpon>Verificação.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
